--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<div class="bar5">Gruppo 5<br>Rivoluzione Verde e Transizione Ecologica<br> </div>
 			</a> <br>
 			
-			<a href="g6/home.html">
+			<a href="g6/Home.html">
 			<div class="bar6">Gruppo 6<br>Equità Sociale, di Genere e Territoriale<br> </div>
 			</a>
 			<br>
